--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="container"></div>
-    <button>Change Size</button>
+    <div><button>Change Size</button></div>
   </body>
 </html>
