--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-    <title>Document</title>
+    <title>Etch-a-Sketch</title>
   </head>
   <body>
+    <h1>Etch-a-Sketch</h1>
     <div id="container"></div>
     <div><button>Change Size</button></div>
   </body>
